@@ -15,6 +15,7 @@ Changes:
 - Add rpcinfo utility.
 - Add vmstat utility.
 - Add ability to edit sync property on ZFS dataset and volume.
+- Add ability to edit mountpoint of ZFS pool.
 - Add ability to import encrypted disks.
 - Add ability to import software raid disks. (except vinum)
 - Add ability to import single disks. (detect ZFS/UFS/NTFS only)
